--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
             width: 1000px;
             padding: 25px;
         }
+        .error
+        {
+            display: none;
+            text-align: center;
+            color: red;
+            font-size: 24pt;
+        }
     </style>
 </head>
 <body>
@@ -128,6 +135,9 @@
         </aside>
         
         <section>
+            <div class="error">
+                <span>Ничего не найдено</span>
+            </div>
             <div class="cars"></div>
         </section>
     </div>
